# aws-lambda-rust-template

./: .gitignore  Cargo.toml  Makefile  README.md  cdk.json  tsconfig.json
infrastructure/: app.ts  cdk.json  package.json
src/: app.rs  entry_cli.rs  entry_lambda.rs  io.rs
